[project]
name = "post-prac"
version = "0.1.0"
description = ""
authors = [
    {name = "CDR4733",email = "shsing2@naver.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ruff (>=0.15.20,<0.16.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "fastapi (>=0.138.1,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "motor (>=3.7.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Python 공식 표준 가이드(PEP 8)의 대중적인 기준인 79글자로 세팅
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I"]